--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <p>Test-192-8</p>
     <script>
-        setTimeout(function () { window.location = "https://itunes.apple.com/appdir"; }, 25);
-        window.location = "appname://";
+        setTimeout(function () { window.location = "https://cris-her.github.io/Test-192-8/"; }, 25);
+        window.location = "twitter://";
     </script>
 </body>
 </html>
