--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <p>Test-192-8</p>
     <script>
-        setTimeout(function () { window.location = "https://cris-her.github.io/Test-192-8/"; }, 25);
+        var now = new Date().valueOf();
+        setTimeout(function () {
+            if (new Date().valueOf() - now > 100) return;
+            window.location = "https://itunes.apple.com/appdir";
+        }, 25);
         window.location = "twitter://";
     </script>
 </body>
