--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             if (new Date().valueOf() - now > 100) return;
             window.location = "https://itunes.apple.com/appdir";
         }, 25);
-        window.location = "twitter://";
+        window.location = "Twitter://";
     </script>
 </body>
 </html>
