--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         var now = new Date().valueOf();
         setTimeout(function () {
             if (new Date().valueOf() - now > 100) return;
-            window.location = "https://itunes.apple.com/appdir";
+            window.location = "https://es.wikipedia.org/wiki/Felis_silvestris_catus";
         }, 25);
         window.location = "Twitter: //";
     </script>
