--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         var now = new Date().valueOf();
         setTimeout(function () {
             if (new Date().valueOf() - now > 100) return;
-            window.location = "https://es.wikipedia.org/wiki/Felis_silvestris_catus";
+            window.location = "https://es.wikipedia.org/wiki/Animalia";
         }, 25);
-        window.location = "Twitter: //";
+        window.location = "twitter: //";
     </script>
 </body>
 </html>
