--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 <body>
     <p>Test-192-8</p>
     <script>
-        var now = new Date().valueOf();
-        setTimeout(function () {
-            if (new Date().valueOf() - now > 100) return;
-            window.location = "https://es.wikipedia.org/wiki/Animalia";
-        }, 25);
-        window.location = "twitter: //";
+        (function() {
+          var app = {
+            launchApp: function() {
+              window.location.replace("twitter://");
+              this.timer = setTimeout(this.openWebApp, 1000);
+            },
+
+            openWebApp: function() {
+              window.location.replace("http://itunesstorelink/");
+            }
+          };
+
+          app.launchApp();
+        })();
     </script>
 </body>
 </html>
