--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         (function() {
           var app = {
             launchApp: function() {
-              window.location.replace("twitter://");
+              window.location.replace("Twitter://");
               this.timer = setTimeout(this.openWebApp, 1000);
             },
 
             openWebApp: function() {
-              window.location.replace("http://itunesstorelink/");
+              window.location.replace("https://es.wikipedia.org/wiki/Animalia/");
             }
           };
 
